# via

./: README.md
.github/workflows/: release.yml
app/: package.json
app/app/: page.tsx
app/app/components/: HotkeyManager.tsx
app/public/: graph.html
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: lib.rs  main.rs  paths.rs  recording.rs  state.rs
app/src-tauri/src/agents/: agent.rs  context_relation.rs  mod.rs  person_relation.rs  rules.md
app/src-tauri/src/commands/: knowledge_graph.rs  knowledge_overview.rs  mod.rs  process_recording.rs  recorder.rs  recording_start.rs  recording_stop.rs  sessions.rs  todo_confirm.rs  todo_ignore.rs  todos.rs
app/src-tauri/src/pipeline/: context.rs  entities.rs  evidences.rs  knowledge.rs  knowledge_builder.rs  mod.rs  pipeline.rs  signals.rs  transcription.rs
app/src-tauri/src/processing/: document.rs  mod.rs  model.rs  processing.rs  progress.rs  state_global.rs  utils.rs
app/src-tauri/src/resolvers/: context.rs  mod.rs  org_identity_resolver.rs  resolver.rs  rules.md
app/src-tauri/src/resolvers/steps/: resolvers_pipeline.rs
app/src-tauri/src/store/: evidence.rs  knowledge.rs  mod.rs
