[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-global-shortcut = "2.3"
cpal = "0.15"
hound = "3.5"
reqwest = { version = "0.12.28", features = ["json", "multipart"] }
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread"] }
tokio-util = "0.7"
async-trait = "0.1"
anyhow = "1"
dotenvy = "0.15.7"
serde_json = "1.0.149"
uuid = { version = "1.20.0", features = ["v4"] }
walkdir = "2.5.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
